--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.553.0",
     "next": "16.0.2",
+    "oidc-client-ts": "^3.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "^3.4.1",
